syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.interledger.spsp.server.grpc";
package org.interledger.stream.proto;

import "asset_codes.proto";

message GetBalanceRequest {
    string accountId = 1;
}


